# pingstat

./: Cargo.toml  README.md
src/: main.rs
stuff/munin/: pingstat.sh
stuff/systemd/: pingstat.service
