[package]
name = "pingstat"
version = "0.1.0"
authors = ["janost <janost@tuta.io>"]

[dependencies]
oping = "0.3.1"
rusqlite = "0.12.0"
time = "0.1.37"
rocket = "0.2.8"
rocket_codegen = "0.2.8"
rocket_contrib = "0.2.8"
serde = "0.9.15"
serde_json = "0.9.10"
serde_derive = "0.9.15"

[dependencies.iron]
version = "*"
